--- a/service-d.html
+++ b/service-d.html
@@ -3,6 +3,16 @@
    <head>
       <meta charset="utf-8" />
       <title>Our Services - Hair & Skin Treatments in Thanjavur | GroHair & GloSkin</title>
+      <!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PWZDNTQG');
+</script>
+<!-- End Google Tag Manager -->
+
       <meta name="description" content="Explore our advanced hair and skin care treatments in Thanjavur, including PRP therapy, hair transplant, microneedling, acne treatment, and laser hair removal.">
       <meta name="keywords" content="Hair care treatments, Skin care treatments, PRP therapy, Microneedling, Hair transplant, Laser hair removal, Dermatologist in Thanjavur">
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -40,7 +50,7 @@
            dataLayer.push(arguments);
          }
          gtag("js", new Date());
-         
+
          gtag("config", "AW-16684090932");
       </script>
       <!-- Google tag (gtag.js) -->
@@ -49,7 +59,7 @@
          window.dataLayer = window.dataLayer || [];
          function gtag(){dataLayer.push(arguments);}
          gtag('js', new Date());
-         
+
          gtag('config', 'G-WXXHQHEZMK');
       </script>
       <script type="text/javascript">
@@ -91,8 +101,89 @@
            ]
          }
       </script>
+          <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "1101899361295319");
+      fbq("track", "PageView");
+    </script>
+    <noscript>
+      <img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=1101899361295319&ev=PageView&noscript=1"
+      />
+    </noscript>
+    <!-- End Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "1142570597698056");
+      fbq("track", "PageView");
+    </script>
+    <noscript>
+      <img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=1142570597698056&ev=PageView&noscript=1"
+      />
+    </noscript>
+    <!-- End Meta Pixel Code -->
    </head>
    <body>
+      <!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PWZDNTQG"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
       <div class="">
          <!-- Topbar Start -->
          <div class="container-fluid bg-light d-none d-lg-block"  data-aos="fade-up">
